--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,8 +7,11 @@
 
         <div class="row-fluid">
             <div class="span6">
-							<p><br/>CloudSpokes is a unique developer community, focused on using APIs, mobile technologies and public cloud platforms to build and deliver enterprise class solutions! Compete in development challenges for cash, prizes and bragging rights and learn new skills. <a href="#register-modal" data-toggle="modal">Register to get started</a> or <a href="/how-it-works-members">see how the process works.</a></p>
-							<p>CloudSpokes is the first developer community that matches the cloud with the crowd - a true market where businesses tap into skills and pay for results (vs. effort), and where developers get access to a new world of opportunity with the cloud.</p>
+            <p><br/>CloudSpokes is a unique developer community, focused on using APIs, mobile technologies and public cloud platforms to build and deliver enterprise class solutions! Compete in development challenges for cash, prizes and bragging rights and learn new skills. <a href="#register-modal" data-toggle="modal">Register to get started</a> or <a href="/how-it-works-members">see how the process works.</a></p>
+
+            <p><a class="btn" href="#register-modal" data-toggle="modal"><span>Register to get started</span></a></p>
+
+            <p>CloudSpokes is the first developer community that matches the cloud with the crowd - a true market where businesses tap into skills and pay for results (vs. effort), and where developers get access to a new world of opportunity with the cloud.</p>
             </div>        	
             <div class="span6">
             	  <div class="title" style="margin:0px"><h1>FEATURED MEMBER</h1></div>
