--- a/app/views/users/registrations/referral.html.erb
+++ b/app/views/users/registrations/referral.html.erb
@@ -15,7 +15,7 @@
 	    </div>
 	    <div class="span5">
 	        <p><%= @member.name.camelcase %> invites you to join them on CloudSpokes, a unique developer community, focused on using APIs, mobile technologies and public cloud platforms to build and deliver enterprise class solutions!</p>
-	        <p><a href="#register-modal" data-toggle="modal">Register now</a> to get started.</p>
+	        <p><a class="btn" href="#register-modal" data-toggle="modal"><span>Register to get started</span></a></p>
 	    </div>
 	</div>
 
