tweaked response from lost password

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,7 +105,7 @@
 
 
           <form class="form-search jqTransform pull-right">
-              <input type="text" class="search-query typeahead" placeholder="Search Members or Challenges"/>
+              <input type="text" class="search-query typeahead" placeholder="Search Members or Open Challenges"/>
               <a href="#" class="btn-search"></a>
           </form>
       </div> <!-- /.container -->
