--- a/app/views/challenges/_comment.html.erb
+++ b/app/views/challenges/_comment.html.erb
@@ -5,7 +5,7 @@
   <div class="main">
     <div class="text"> <%= raw(comment.comment) %> </div>
     <div class="info">
-      <span class="name"><%= comment.member.name %></span>,
+      <span class="name"><%= comment.member.name %> <% if comment.from_challenge_admin %>(admin)<% end %></span>,
       <span class="time"><%= comment.createddate.strftime("%b %d, %Y at %H:%M %p") %></span>
       <% unless comment.reply? %>
         <%= link_to "reply", challenge_path(challenge, reply_to: comment.id, anchor: "new-comment-form") %>
