added text for manish_kumar

--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -48,9 +48,7 @@
                     <table class="type featured"><tr><td><%= number_to_currency(@platform_stats['featured_member_money'], :precision => 0) %></td></tr></table>
                 </div>
 
-                <p><a href="/members/parasquid">Parasquid</a> has been a member of CloudSpokes since early summer 2012, but didn't really start participating until November when he laid eyes on our "Rebuild our CloudSpokes site in Rails" challenge and won 1st place.</p>
-
-                <p>In the 3+ months he's been actively participating, parasquid's racked up 8 1st wins and $5,500 bucks! The submissions keep rolling in and the cash and wins keep piling up for Tristan and that's what makes him our February '13 Member of the Month.</p>
+                <p><a href="/members/Manish_Kumar">Manish</a> joined CloudSpokes in October and has since been extremely active in the community. He has racked up 5 wins and judged over 15 challenges (with many more in the queue). He has been a force to be reckoned with, and still considers himself a "newbie". Watch out for his name as he continues to climb our leaderboards as our March '13 Member of the Month</p>
             </div>
             <div class="span6">
                 <div class="title"><h1>LEADERBOARD</h1></div>
