--- a/app/views/challenges/submissions.html.erb
+++ b/app/views/challenges/submissions.html.erb
@@ -1,23 +1,56 @@
 <% content_for :head do %><title>Submissions (Restricted) - CloudSpokes</title><% end %>
 
-<!-- CONTENT
-        ================================================== -->
-<div class="content-wrapper">
-    <div class="container">
+<%= content_wrapper do %>
 
-    <div class="title"><h1>ALL SUBMISSION FILES</h1></div>
-    <div class="content">
-        <% if @deliverables.empty? %>
-            <div align="center"><strong>No files found for this challenge.</strong></div>
+  <div class="title"><h1>ALL SUBMISSION FILES</h1></div>
+
+  <div class="row-fluid">
+    <div class="span8">
+
+      <% if @deliverables.empty? %>
+        <div align="center"><strong>No files found for this challenge.</strong></div>
+      <% else %>
+
+        <% @members.uniq.each do |member| %>
+
+          <h1><%= member %></h1>
+
+          <table class="table table-hover table-bordered">
+          <thead>
+            <tr>
+              <th>Type</th>
+              <th>Asset</th>
+              <th>Comments</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @deliverables.each do |deliverable| %>
+              <% if deliverable.username == member %>
+                <tr>
+                  <td><%= deliverable.type %></td>
+                  <td width="45%"><%= link_to deliverable.url, deliverable.url, :target => '_blank' %></td>
+                  <td width="50%"><%= deliverable.comments %></td>
+                </tr>
+              <% end %>
+            <% end %>        
+          </tbody>
+          </table>
+
         <% end %>
-    	<% @deliverables.each do |deliverable| %>
-        <div class="well">
-            Member: <%= link_to deliverable.username, member_path(deliverable.username) %><br/>
-            Type: <%= deliverable.type %> - <%= link_to deliverable.url, deliverable.url, :target => '_blank' %><br/>
-            Comments: <%= deliverable.comments %><br/>
-        </div>
-        <% end %>
+
+      <% end %>
+
     </div>
 
-    </div> <!-- /.container -->
-</div><!-- /.loginbar-wrapper -->
+    <div class="span4">
+        <%= render partial: "right_admin", locals: {challenge: @challenge} %>
+        <%= render partial: "right_technologies", locals: {challenge: @challenge} %>
+        <%= render partial: "right_timeframe", locals: {challenge: @challenge} %>
+        <%= render partial: "right_prizes", locals: {challenge: @challenge} %>
+        <%= render partial: "right_category_detail", locals: {challenge: @challenge} %>
+        <%= render partial: "right_assets", locals: {challenge: @challenge} %>
+    </div>  
+
+  </div>
+
+<% end %>
