--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,12 +1,11 @@
-<link href="/assets/jeff-bootstrap.min.css" rel="stylesheet">
-
 <%= content_wrapper do %>
 
   <div class="title"><h1>PRIVATE MESSAGES</h1></div>
 
-    <div style="margin:10px">
+    <div style="margin:25px">
 
-      <button class="btn btn-primary" type="button">New Message</button><br/><br/>
+      <a class="btn btn-primary" type="button" href="#myModal" data-toggle="modal"><span>New Message</span></a>
+      <br/><br/>
 
       <div class="tabbable"> <!-- Only required for left/right tabs -->
         <ul class="nav nav-tabs">
@@ -49,7 +48,7 @@
           <table class="table table-hover table-bordered">
             <thead>
               <tr>
-                <th>From</th>
+                <th>To</th>
                 <th>Subject</th>
                 <th>Date</th>
               </tr>
@@ -70,15 +69,25 @@
 
           </div>
         </div>
-      </div>
+      </div>   
 
     </div>
 
-	</div>
-</div>
-
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="/assets/jeff-bootstrap.min.css"></script>
+    <!-- Modal -->
+    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-header"></div>
+        <div class="modal-body">
+            <div class="title"><h1>New Message</h1></div>
+            <div class="content">
+                <p>One fine body..</p>
+            </div>
+            <div class="control-group pull-right">
+                <a class="btn btn-grey" data-dismiss="modal" aria-hidden="true"><span>Close</span></a>
+                <a class="btn btn-primary"><span>Save changes</span></a>
+            </div>
+        </div>
+        <div class="modal-footer"></div>
+        <button type="button" class="close" data-dismiss="modal"></button>
+    </div>    
 
 <% end %>
