--- a/app/views/admin/challenges/new.html.erb
+++ b/app/views/admin/challenges/new.html.erb
@@ -1,2 +1,8 @@
-<h2>New Challenge</h2>
-<%= render 'form' %>
+<%= content_wrapper do %>
+
+	<div class="title"><h1>CHALENGE ADMIN</h1></div>
+	<div class="span10">
+		<%= render 'form' %>
+	</div>
+
+<% end %>	
