--- a/app/views/admin/challenges/_form.html.erb
+++ b/app/views/admin/challenges/_form.html.erb
@@ -1,8 +1,5 @@
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-<%= simple_form_for @challenge, validate: true, html: { :class => 'form-horizontal' } do |f| %>
+<%= simple_form_for @challenge, validate: true, html: { :class => 'form-horizontal jqTransform' } do |f| %>
   <%= f.hidden_field :challenge_id, value: @challenge.challenge_id %>
-  <div class="row">
-    <div class="span12">
 
       <div class='tabbable'>
 
@@ -24,11 +21,11 @@
           </div>
         </div>
 
-      </div>
 
       <hr />
       <%= f.button :submit %>
 
     </div>
-  </div>
 <% end %>
+
+
