--- a/app/views/challenges/recent.html.erb
+++ b/app/views/challenges/recent.html.erb
@@ -8,7 +8,7 @@
     	<div class="title"><h1>RECENTLY COMPLETED CHALLENGES</h1></div>
 
 	    <% if @challenges.empty? %>
-	        <p style="text-align:center;font-weight:bold">No open challenges found matching your criteria.</p>
+	        <p style="text-align:center;font-weight:bold">No recently completed challenges found.</p>
 	    <% else %>
 	        <% @challenges.in_groups_of(2, false) do |row_challenges| %>
 	        <div class="row-fluid">
