--- a/app/views/challenges/_comment.html.erb
+++ b/app/views/challenges/_comment.html.erb
@@ -6,7 +6,7 @@
     <div class="text"> <%= raw(comment.comment) %> </div>
     <div class="info">
       <span class="name"><%= comment.member.name %> <% if comment.from_challenge_admin %>(admin)<% end %></span>,
-      <span class="time"><%= comment.createddate.strftime("%b %d, %Y at %H:%M %p") %></span>
+      <span class="time"><%= format_date_time(comment.createddate) %></span>
       <% unless comment.reply? %>
         <%= link_to "reply", challenge_path(challenge, reply_to: comment.id, anchor: "new-comment-form") %>
       <% end %>
