finished up private messages

--- a/app/views/admin/challenges/_form.html.erb
+++ b/app/views/admin/challenges/_form.html.erb
@@ -7,6 +7,7 @@
           <li class="active"><a href="#challenge-info" data-toggle="tab">Challenge Info</a></li>
           <li><a href="#prizes" data-toggle="tab">Prizes</a></li>
           <li><a href="#assets" data-toggle="tab">Assets</a></li>
+          <li><a href="#advanced" data-toggle="tab">Advanced</a></li>
         </ul>
 
         <div class='tab-content'>
@@ -19,6 +20,9 @@
           <div class='tab-pane' id='assets'>
             <%= render 'assets', {f: f} %>
           </div>
+          <div class='tab-pane' id='advanced'>
+
+          </div>          
         </div>
 
 
