--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,71 +1,72 @@
+<link rel="stylesheet" href="/assets/fontawesome/css/font-awesome.min.css">
+<%= csrf_meta_tag %>
+
 <%= content_wrapper do %>
 
   <div class="title"><h1>PRIVATE MESSAGES</h1></div>
 
     <div style="margin:25px">
 
-      <a class="btn btn-primary" type="button" href="#myModal" data-toggle="modal"><span>New Message</span></a>
+      <a class="btn btn-primary" type="button" href="#message-new-modal" data-toggle="modal"><span>New Message</span></a>
       <br/><br/>
 
       <div class="tabbable"> <!-- Only required for left/right tabs -->
         <ul class="nav nav-tabs">
-          <li class="active"><a href="#inbox" data-toggle="tab">Inbox</a></li>
+          <li class="active"><a href="#inbox" data-toggle="tab">Inbox <%if @all_messages.inbox_unread > 0 %><span class="badge"><%= @all_messages.inbox_unread %></span><% end %></a></li>
           <li><a href="#sent" data-toggle="tab">Sent</a></li>
         </ul>
         <div class="tab-content">
           <div class="tab-pane active" id="inbox">
      
-          <table class="table table-hover table-bordered">
-            <thead>
-              <tr>
-                <th>From</th>
-                <th>Subject</th>
-                <th>Date</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="warning">
-                <td><a href="">forurq</a> <span class="badge">2</span></i></td>
-                <td><a href="">Configure Jenkins for Custom Build Tools</a></td>
-                <td>1/24/2013 at 07:43PM</td>
-              </tr>
-              <tr>
-                <td><a href="">enreeco</a> <span class="badge">1</span></td>
-                <td><a href="">Vanilla Forums Credentials</a></td>
-                <td>12/13/2013 at 09:43PM</td>
-              </tr>
-              <tr class="warning">
-                <td><a href="">mess</a> <span class="badge">5</span></td>
-                <td><a href="">Challenge 1001</a></td>
-                <td>1/15/2013 at 11:43PM</td>
-              </tr>           
-            </tbody>
-          </table>
+            <% unless @all_messages.to_messages.empty? %>
+              <table class="table table-hover table-bordered">
+                <thead>
+                  <tr>
+                    <th>From</th>
+                    <th>Subject</th>
+                    <th>Date</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% @all_messages.to_messages.each do |m| %>
+                  <tr<% if m['status'].eql?('unread') %> class="warning"<% end %>>
+                    <td width="175"><%= link_to m['display_user'], member_path(m['display_user']), :target => '_blank' %></a> <% if m['status'].eql?('unread') %><i class="icon-bullhorn"></i><% end %></td>
+                    <td><%= link_to m['subject'], messages_show_path(m['id']) %></a></td>
+                    <td width="150"><%= DateTime.parse(m['datetime']).strftime("%-m/%-d/%Y at %I:%M%p") %></td>
+                  </tr> 
+                  <% end %>       
+                </tbody>
+              </table>
+            <% else %>
+              <div style="padding-left:10px">No messages found.</div>
+            <% end %>
 
           </div>
+
           <div class="tab-pane" id="sent">
 
-          <table class="table table-hover table-bordered">
-            <thead>
-              <tr>
-                <th>To</th>
-                <th>Subject</th>
-                <th>Date</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr >
-                <td><a href="">forurq</a></td>
-                <td><a href="">Configure Jenkins for Custom Build Tools</a></td>
-                <td>1/24/2013 at 07:43PM</td>
-              </tr>
-              <tr>
-                <td><a href="">enreeco</a></td>
-                <td><a href="">Vanilla Forums Credentials</a></td>
-                <td>12/13/2013 at 09:43PM</td>
-              </tr>         
-            </tbody>
-          </table>
+            <% unless @all_messages.from_messages.empty? %>
+              <table class="table table-hover table-bordered">
+                <thead>
+                  <tr>
+                    <th>To</th>
+                    <th>Subject</th>
+                    <th>Date</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% @all_messages.from_messages.each do |m| %>
+                  <tr>
+                    <td width="175"><%= link_to m['display_user'], member_path(m['display_user']), :target => '_blank' %></a></td>
+                    <td><%= link_to m['subject'], messages_show_path(m['id']) %></a></td>
+                    <td width="150"><%= DateTime.parse(m['datetime']).strftime("%-m/%-d/%Y at %I:%M%p") %></td>
+                  </tr> 
+                  <% end %>        
+                </tbody>
+              </table>
+            <% else %>
+              <div style="padding-left:10px">No messages found.</div>
+            <% end %>            
 
           </div>
         </div>
@@ -74,16 +75,20 @@
     </div>
 
     <!-- Modal -->
-    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div id="message-new-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-header"></div>
         <div class="modal-body">
             <div class="title"><h1>New Message</h1></div>
             <div class="content">
-                <p>One fine body..</p>
+              <form>
+                <p><input type="text" id="to" placeholder="Member name..."><br/><br/></p>
+                <p><textarea id="subject" style="width:800px;height:25px" placeholder="Subject.."></textarea></p>
+                <p><textarea id="body" style="width:800px;height:200px"></textarea></p>
+              </form>
             </div>
             <div class="control-group pull-right">
-                <a class="btn btn-grey" data-dismiss="modal" aria-hidden="true"><span>Close</span></a>
-                <a class="btn btn-primary"><span>Save changes</span></a>
+                <a class="btn btn-primary" id="reply" onclick="processNewMessage()"><span>Send Message</span></a>
+                <a class="btn btn-grey" data-dismiss="modal" aria-hidden="true"><span>Discard</span></a>
             </div>
         </div>
         <div class="modal-footer"></div>
