--- a/app/views/challenges/results.html.erb
+++ b/app/views/challenges/results.html.erb
@@ -25,7 +25,7 @@
           <div class="placement well well-large span6">
               <%= image_tag(s.member.profile_pic, :width => '82x82', :class => 'pull-left photo') %>
               <%= link_to s.member.name, member_path(s.member), :style => 'margin-top:10px' %>
-              Score: <%= s.score %><br/>
+              Score: <%= number_with_precision(s.score, :precision => 2) %><br/>
               Submitted: <%= participant_submission_date(s.submission_date_utc) %>
               <a href="<%= member_path(s.member) %>" class="btn pull-right-top"><span>view profile</span></a>
               <% if s.place.to_i > 0 %><span class="place p<%= s.place %>"><%= s.place.to_i.ordinalize %></span><% end %>
