removed backpack girl from rotation

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -17,7 +17,7 @@
                             ================================================== -->
                     <div class="hidden-phone">
                         <div class="banner-unit crowdsouced-banner">
-                            <img src="/assets/banner/<%= ['crowdsourced','connect-with-cloud'].sample %>.jpg" alt=""/>
+                            <img src="/assets/banner/<%= ['connect-with-cloud'].sample %>.jpg" alt=""/>
                             <div class="buttons">
                                 <a class="get-started" href="/contact"><span><span>GET STARTED</span></span></a>
                                 <a class="learn-more" href="/how-it-works">Or Learn More</a>
