--- a/app/views/judging/judging_queue.html.erb
+++ b/app/views/judging/judging_queue.html.erb
@@ -24,9 +24,9 @@ function signup(challenge_id) {
             <div class="span8">
                 <div class="title"><h1>JUDGING QUEUE</h1></div>
 
-                <p>Would you like to judge challenge submissions? Here's how the judging process works. We typically have two judges per challenges so the following challenges need at least one judge. Find a challenge in a technology category that you feel confident that you can judge. Make sure that you can also commit to submitting all scorecards by the Due date for the challenge.</p>
+                <p>Would you like to judge challenge submissions? Here's how the judging process works. We typically have three judges per challenges so the following challenges need at least two judges. Find a challenge in a technology category that you feel confident that you can judge. Make sure that you can also commit to submitting all scorecards by the Due date for the challenge.</p>
                 <p>Once the challenge closes you'll receive a notifications email that the submissions are available and scorecards are ready for you to judge. Once you install, run, test and evaluate each submission (we have plenty of judging instructions for you), you'll complete a scorecard grading the submission. Once all judges have completed all scorecards the winners will be selected.</p>
-                <p>We will pay you $25 for each submission that you judge and a bonus of $50 for every 10 submissions that you judge within a month. You can judge as many submissions as you'd like. Any poor reviews and/or scorecards will not be credit. Only CloudSpokes members that have won at least three challenges are eligible.</p>
+                <p>We will pay you $25 for each submission that you judge and a bonus of $50 for every 10 submissions that you judge within a month. You can judge as many submissions as you'd like. Any poor reviews and/or scorecards will not be credit. Only CloudSpokes members that have won at least ten challenges are eligible.</p>
 
                 <% @challenges.each do |c| %>
                 <div class="judge well well-large">
@@ -39,9 +39,7 @@ function signup(challenge_id) {
                 </div>
                 <% end %>
 
-                <% if @challenges.empty? %>
-                    There are currently no challenges that are in need of judges. Please check back later.
-                <% end %>
+                <% if @challenges.empty? %><strong><%= @no_challenges_message %></strong><% end %>
 
             </div>
 
