load controller specific styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 
     <!-- styles -->
     <%= stylesheet_link_tag "application" %>
+    <%= stylesheet_link_tag params[:controller] %>
 
     <!-- scripts -->
     <%= javascript_include_tag "application" %>
