--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 
     <!-- scripts -->
     <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag params[:controller] %>
 
     <!-- start Google analytics -->
     <script type="text/javascript">
