--- a/app/assets/stylesheets/submissions.css.scss
+++ b/app/assets/stylesheets/submissions.css.scss
@@ -1,12 +1,46 @@
 .submission-wrapper {
-  border: 1px solid #ccc;
+  /*border: 1px solid #ccc;
   box-shadow: 0 1px 1px #DDD;
   padding: 20px;
   border-radius: 5px;
-  margin: 20px 0;
-  h4 {
-    margin-bottom: 20px;
+  margin: 20px 0;*/
+
+  .jqTransformSelectWrapper ul {
+    height: auto !important;
   }
+
+  .select2-container-multi div {
+    height: auto;
+    margin: 2px 2px 2px 8px;
+    color: #222;
+  }
+
+  .select2-container-multi .select2-choices {
+    min-height: 26px;
+    padding: 4px 2px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background: none;
+  } 
+
+  .select2-container-multi.select2-dropdown-open .select2-choices {
+    border-radius: 4px 4px 0 0;
+    border: 1px solid #999;
+  } 
+
+  .select2-container-multi.select2-dropdown-open.select2-drop-above .select2-choices {
+    border-radius: 0 0 4px 4px;
+  } 
+
+  h2, h3 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    line-height: 35px;
+    color: #ffffff;
+    text-indent: 15px;
+    background: #d1d1d1;
+  }
+
   textarea {
     width: 90%;
     height: 5em;
@@ -15,9 +49,14 @@
   .deliverables {
     .deliverable {
       padding: 5px;
-      line-height: 35px;
-      border-bottom: 1px dashed #ccc;
+      margin-top: 10px;
+      background: #f9f9f9;
+      line-height: 42px;
+      border-bottom: 1px solid #eee;
       position: relative;
+      box-shadow: 1px 1px 2px #ccc;
+      border-radius: 1px;
+
       .layer {
         position: absolute;
         top: 0;
@@ -33,16 +72,19 @@
         font-size: 1.2em;
       }
       .info {
-        .type {
+        .label {
           float: left;
-          width: 200px;
-          color: #777;
-          font-weight: bold;
+          padding: 0 8px;
+          border-radius: 2px;
+          text-shadow: 1px 1px 1px #fff;
+
+          font-size: 84%;
         }
         .url {
-          float: left;
           width: 600px;
           color: #666;
+          position: absolute;
+          left: 160px;
         }
         .actions {
           float: right;
@@ -51,7 +93,7 @@
         
       }
       &:hover {
-        background-color: #eee;
+        background-color: #f3f3f3;
         .actions {
           display: block;
         }
@@ -60,19 +102,23 @@
         margin: 10px;
         padding: 10px;
         background-color: white;
-        border-radius: 5px;
+        border-radius: 1px;
       }
     }
   }
   .drag-drop-area {
     color: #999;
-    border: 1px solid #ccc;
-    font-size: 2em;
-    font-weight: bold;
-    line-height: 2em;
-    padding: 10px 20px;
+    border: 3px dashed #eee;
+    font-size: 1.6em;
+    font-weight: 600;
+    line-height: 1.6em;
+    padding: 20px;
+    margin-bottom: 8px;
     &.droppable {
-      background-color: gray;
+      background-color: #ffc;
+    }
+    &:hover {
+      background-color: #ffc;
     }
   }
   .new-deliverable {
