--- a/app/views/admin/challenges/_challenge_info.html.erb
+++ b/app/views/admin/challenges/_challenge_info.html.erb
@@ -1,6 +1,6 @@
-<legend>Challenge Info</legend>
+
 <%= f.input :name, required: true, input_html: {required: true, autofocus: true} %>
-<%= f.input :status, required: true, collection: @challenge.statuses, input_html: {required: true} %>
+<%= f.input :status, required: true, collection: @challenge.statuses, default: 'Planned', input_html: {required: true} %>
 
 <%= f.input :description, :as => :text, input_html: { :class => 'ckeditor' } %>
 <%= f.input :requirements, :as => :text, input_html: { :class => 'ckeditor' } %>
@@ -118,6 +118,4 @@ $(function() {
 })
 </script>
 
-
-
-<%= f.input :comments, :as => :text, input_html: { :class => 'ckeditor' }, hint: 'These are internal comments only.' %>
+<%= f.input :comments, :as => :text, hint: 'These are internal comments only.' %>
