--- a/app/views/admin/challenges/_prizes.html.erb
+++ b/app/views/admin/challenges/_prizes.html.erb
@@ -1,5 +1,3 @@
-<legend>Prizes</legend>
-
 <div>
   <div id="prize-set">
     <% @prizes.each do |prize| %>
@@ -7,25 +5,25 @@
         <div class="control-group">
           <label class="control-label">Place</label>
           <div class="controls">
-            <input type="number" name="admin_challenge[prizes][][place]" value='<%= prize.place %>'></input>
+            <input type="text" name="admin_challenge[prizes][][place]" value='<%= prize.place %>4444'></input>
           </div>
         </div>
         <div class="control-group">
           <label class="control-label">Prize</label>
           <div class="controls">
-            <input type="text" name="admin_challenge[prizes][][prize]" value='<%= prize.prize %>' class='prize-prize'></input>
+            <input type="text" name="admin_challenge[prizes][][prize]" value='<%= prize.prize %>'></input>
           </div>
         </div>
         <div class="control-group">
           <label class="control-label">Points</label>
           <div class="controls">
-            <input type="number" name="admin_challenge[prizes][][points]" value='<%= prize.points %>' class='prize-points'></input>
+            <input type="text" name="admin_challenge[prizes][][points]" value='<%= prize.points %>'></input>
           </div>
         </div>
         <div class="control-group">
           <label class="control-label">Value</label>
           <div class="controls">
-            <input type="number" name="admin_challenge[prizes][][value]" value='<%= prize.value %>' class='prize-value'></input>
+            <input type="text" name="admin_challenge[prizes][][value]" value='<%= prize.value %>'></input>
           </div>
         </div>
         <a class='btn btn-danger delete-prize-set'>Delete This Prize Set</a>
